module 4 (tidy) updated

--- a/refs.bib
+++ b/refs.bib
@@ -645,3 +645,15 @@
     note = {R package version 0.2.3.9000},
     url = {https://github.com/gadenbuie/xaringanExtra},
   }
+
+@Article{tidyHeatmap,
+    title = {tidyHeatmap: an R package for modular heatmap production based on tidy principles},
+    author = {Stefano Mangiola and Anthony Papenfuss},
+    journal = {Journal of Open Source Software},
+    year = {2020},
+    volume = {5},
+    number = {52},
+    pages = {2472},
+    url = {https://doi.org/10.21105/joss.02472},
+    doi = {10.21105/joss.02472},
+  }
